fixed the alignment of login component w/ mobile and desktop

--- a/client/src/components/Login/style.css
+++ b/client/src/components/Login/style.css
@@ -4,5 +4,5 @@
     border-radius: 6px;
     padding: 50px;
     border-style: solid;
-    margin: 10% 33% 10% 33%;
+    width: auto;
 }
